[Polyam] Fix missing border around tab/filter bar
Port b6c1b8f7480d87340a128c593ad267e4b5501beb to polyam-glitch

--- a/app/javascript/flavours/polyam/styles/components/_mixins.scss
+++ b/app/javascript/flavours/polyam/styles/components/_mixins.scss
@@ -141,7 +141,7 @@
   display: flex;
   flex-shrink: 0;
 
-  @media screen and (max-width: $no-gap-breakpoint) {
+  @media screen and (max-width: $no-gap-breakpoint - 1px) {
     border-right: 0;
     border-left: 0;
   }
